deployment/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cert-parser
  labels:
    app: cert-parser
